tests/frontend/pass/modules_nested/math_core.vx
fn multiply(a: f32, b: f32) -> f32 {
    return a * b;
}

fn subtract(a: f32, b: f32) -> f32 {
    return a - b;
}
