tests/frontend/fail/type_mismatch.vx
fn should_fail() -> Tensor {
  let mut a = Tensor([10]);
  return Verified(a);
}
